objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <label>Secret Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__AlternateEmail__c</fullName>
        <description>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</description>
        <inlineHelpText>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__HomeEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__Home_Address__c</fullName>
        <description>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Home&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Home&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</inlineHelpText>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Organization_Type__c</fullName>
        <description>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</description>
        <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</inlineHelpText>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Other_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Other&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Other&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</inlineHelpText>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__PreferredPhone__c</fullName>
        <description>Which phone number should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which phone number should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which email should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                    <default>true</default>
                    <label>Personal</label>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Primary_Address_Type__c</fullName>
        <description>Which type of address is the mailing address?</description>
        <inlineHelpText>Which type of address is the mailing address?</inlineHelpText>
        <label>Primary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this Contact from any Individual Account processing. If you leave the Account field blank, it will remain blank.</description>
        <inlineHelpText>Excludes this Contact from any Individual Account processing. If you leave the Account field blank, it will remain blank.</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Secondary_Address_Type__c</fullName>
        <description>What type of address is the other address?</description>
        <inlineHelpText>What type of address is the other address?</inlineHelpText>
        <label>Secondary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__SystemAccountProcessor__c</fullName>
        <description>NO LONGER USED - Hidden system field: do not change.  Updated by automatic processes.  See Contacts &amp; Organization settings.</description>
        <inlineHelpText>NO LONGER USED - Indicates which model drives Account relationship behavior: Individual (Bucket) or One-to-One</inlineHelpText>
        <label>DEPRECATED - _SYSTEM: ACCOUNT PROCESSOR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-to-One</fullName>
                    <default>true</default>
                    <label>One-to-One</label>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Type_of_Account__c</fullName>
        <description>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</description>
        <formula>IF(Account.npe01__SYSTEMIsIndividual__c,&quot;Individual&quot;,&quot;Organization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__WorkEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__WorkPhone__c</fullName>
        <description>See &apos;Preferred Phone&apos; field.</description>
        <inlineHelpText>See &apos;Preferred Phone&apos; field.</inlineHelpText>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npe01__Work_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Work&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Work&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Work, the Mailing Address.  If the Secondary Address Type is Work, the Other Address.</inlineHelpText>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See excluded Opportunity Record types, excluded Opportunity types in Household setting for &apos;always roll up to primary&apos; (exclude non individual Accounts).  Do not update.  Updated by automatic process.</description>
        <inlineHelpText>The average amount of all won Opportunities related to this Contact by a primary Opportunity Contact Role.</inlineHelpText>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year_Total__c</fullName>
        <inlineHelpText>The sum of won Opportunity amounts in the Best Gift Year.</inlineHelpText>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year__c</fullName>
        <inlineHelpText>The year of the largest total amount of won Opportunities related to this Contact by primary Contact Role.  See also Best Gift Year Total.</inlineHelpText>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The oldest Close Date of a won Opportunity with amount greater than zero related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdMailingAddress__c</fullName>
        <description>Formula: Clone of the Household Mailing address (also a Formula)</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;,

Account.BillingStreet &amp; BR() &amp;
Account.BillingCity &amp; IF(ISBLANK(Account.BillingCity), &quot;&quot;, &quot;, &quot;) &amp; Account.BillingState &amp; &quot; &quot; &amp; Account.BillingPostalCode 
&amp; IF(ISBLANK(Account.BillingCountry), &quot;&quot;, BR()&amp; Account.BillingCountry),

npo02__Household__r.npo02__Formula_MailingAddress__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Clone of the Household Mailing address (also a Formula)</inlineHelpText>
        <label>Household Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Formula_HouseholdPhone__c</fullName>
        <description>Formula: Simple formula of Household Phone field.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__HouseholdPhone__c,
npo02__Household__r.npo02__HouseholdPhone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Simple formula of Household Phone field.</inlineHelpText>
        <label>Household Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household_Naming_Order__c</fullName>
        <inlineHelpText>Determines the order in which Contact names are used to generate Household name.</inlineHelpText>
        <label>Household Naming Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>npo02__Household__c</referenceTo>
        <relationshipLabel>Household Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The largest amount of a won Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDateHH__c</fullName>
        <description>Formula: Last Close Date field of the related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__LastCloseDate__c,
npo02__Household__r.npo02__LastCloseDate__c)</formula>
        <label>Last Household Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDate__c</fullName>
        <description>System field: do not change. Updated by automatic processes. Do not edit.</description>
        <inlineHelpText>The close date of the most recent won Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The amount of the most recent (by Close Date) won Membership (Record Type) Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipDate__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The most recent Close Date of a won Membership (Record Type) Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipLevel__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The level of the most recent (by Close Date) won Membership (Record Type) Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipOrigin__c</fullName>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The origin (new, renewal, reacquire...) of the most recent (Close Date) won Membership (Record Type) Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not update, updated by automatic process.</description>
        <inlineHelpText>The amount of the most recent won Opportunity by Close Date related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipEndDate__c</fullName>
        <description>Do not change. Updated by automatic processes.</description>
        <inlineHelpText>The Membership End Date of the most recent (Close Date) Membership Opportunity (Record Type) related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipJoinDate__c</fullName>
        <description>Do not change. Updated by automatic processes.</description>
        <inlineHelpText>The Join Date of the oldest (Close Date) Membership Opportunity (Record Type) related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Naming_Exclusions__c</fullName>
        <description>Determines which household names this contact is NOT included as part of.</description>
        <inlineHelpText>Select to exclude this Contact&apos;s name from various generated Household names.</inlineHelpText>
        <label>Naming Exclusions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Household__c.Name</fullName>
                </value>
                <value>
                    <fullName>Household__c.Formal_Greeting__c</fullName>
                </value>
                <value>
                    <fullName>Household__c.Informal_Greeting__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The number of won Membership Opportunities (Record Type) related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total amount of won Opportunities related to this Contact by primary Opportunity Contact Role, closed two years ago.</inlineHelpText>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total amount of won Opportunities related to this Contact by primary Opportunity Contact Role, closed in the last number of days defined in Household Settings.</inlineHelpText>
        <label>Total Gifts Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYearHH__c</fullName>
        <description>Formula:  Total Gifts Last Year on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__OppAmountLastYear__c,
npo02__Household__r.npo02__OppAmountLastYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula:  Total Gifts Last Year on related Household.</inlineHelpText>
        <label>Total Household Gifts Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total amount of won Opportunities related to this Contact by primary Opportunity Contact Role, closed last year.</inlineHelpText>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYearHH__c</fullName>
        <description>Formula:  Total Gifts This Year on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__OppAmountThisYear__c,
npo02__Household__r.npo02__OppAmountThisYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula:  Total Gifts This Year on related Household.</inlineHelpText>
        <label>Total Household Gifts This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total amount of won Opportunities related to this Contact by primary Opportunity Contact Role, closed this year.</inlineHelpText>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Contact by primary Opportunity Contact Role, closed two years ago.</inlineHelpText>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Contact by primary Opportunity Contact Role, closed in the last number of days defined in Household Settings.</inlineHelpText>
        <label>Number of Gifts Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Contact by primary Opportunity Contact Role, closed last year.</inlineHelpText>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Contact by primary Opportunity Contact Role, closed this year.</inlineHelpText>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The smallest amount of a won Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Last_Year__c</fullName>
        <inlineHelpText>The sum of soft credit Opportunity amounts last year determined by Opportunity Contact Role and filtered by Roles in Household Settings.</inlineHelpText>
        <label>Soft Credit Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_This_Year__c</fullName>
        <inlineHelpText>Total soft credit amount this year</inlineHelpText>
        <label>Soft Credit This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Total__c</fullName>
        <inlineHelpText>Total amount in soft credits for this Contact&apos;s lifetime. Defined in the Household Settings tab.</inlineHelpText>
        <label>Soft Credit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Two_Years_Ago__c</fullName>
        <inlineHelpText>The sum of soft credit Opportunity amounts two years ago determined by Opportunity Contact Role and filtered by Roles in Household Settings.</inlineHelpText>
        <label>Soft Credit Two Years Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__SystemHouseholdProcessor__c</fullName>
        <description>Used to set if Households should get created for all Contacts, or just those which are connected to an individual account.  Deprecated; replaced by HouseholdsSettings npo02__Household_Rules__c</description>
        <label>_SYSTEM: HOUSEHOLD PROCESSOR-DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Individual Contacts</fullName>
                </value>
                <value>
                    <fullName>All New or Edited Contacts</fullName>
                </value>
                <value>
                    <fullName>No Contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The total amount of won Membership Opportunities (Record Type) related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The sum of won Opportunity Amounts related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Total_Household_Gifts__c</fullName>
        <description>Formula:  Total Gifts on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__TotalOppAmount__c,
npo02__Household__r.npo02__TotalOppAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula:  Total Gifts on related Household.</inlineHelpText>
        <label>Total Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Address_Verification_Status__c</fullName>
        <description>The verification status of the current Address. If this Address requires verification, navigate to the current Address record and select Verify Address.  Consult NPSP documentation for more information on Address Verification..</description>
        <formula>npsp__Current_Address__r.npsp__Verification_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The verification status of the current Address. If this Address requires verification, navigate to the current Address record and select Verify Address. Consult the Power of Us Hub documentation for more information on Address Verification.</inlineHelpText>
        <label>Address Verification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Batch that this Contact was created in.</description>
        <inlineHelpText>Lookup to the Batch that this Contact was created in.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>